docs/api/qiskit/0.35/qiskit.transpiler.passes.ASAPScheduleAnalysis.md
---
title: ASAPScheduleAnalysis
description: API reference for qiskit.transpiler.passes.ASAPScheduleAnalysis
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.ASAPScheduleAnalysis
---

# ASAPScheduleAnalysis

<span id="qiskit.transpiler.passes.ASAPScheduleAnalysis" />

`ASAPScheduleAnalysis(durations)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/transpiler/passes/scheduling/scheduling/asap.py "view source code")

Bases: `qiskit.transpiler.passes.scheduling.scheduling.base_scheduler.BaseScheduler`

ASAP Scheduling pass, which schedules the start time of instructions as early as possible..

See `BaseScheduler` for the detailed behavior of the control flow operation, i.e. `c_if`.

Scheduler initializer.

**Parameters**

**durations** (`InstructionDurations`) – Durations of instructions to be used in scheduling

## Methods

### name

<span id="qiskit.transpiler.passes.ASAPScheduleAnalysis.name" />

`ASAPScheduleAnalysis.name()`

Return the name of the pass.

### run

<span id="qiskit.transpiler.passes.ASAPScheduleAnalysis.run" />

`ASAPScheduleAnalysis.run(dag)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/transpiler/passes/scheduling/scheduling/asap.py "view source code")

Run the ASAPSchedule pass on dag.

**Parameters**

**dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to schedule.

**Returns**

A scheduled DAG.

**Return type**

[DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")

**Raises**

*   [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if the circuit is not mapped on physical qubits.
*   [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if conditional bit is added to non-supported instruction.

## Attributes

<span id="qiskit.transpiler.passes.ASAPScheduleAnalysis.CONDITIONAL_SUPPORTED" />

### CONDITIONAL\_SUPPORTED

`= (, )`

<span id="qiskit.transpiler.passes.ASAPScheduleAnalysis.is_analysis_pass" />

### is\_analysis\_pass

Check if the pass is an analysis pass.

If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.

<span id="qiskit.transpiler.passes.ASAPScheduleAnalysis.is_transformation_pass" />

### is\_transformation\_pass

Check if the pass is a transformation pass.

If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).

